--- a/AV/hashing/hash.html
+++ b/AV/hashing/hash.html
@@ -219,7 +219,7 @@ form {
       }
     }
 
-  // key that will run 300 ms after the user stops typing in input
+  // Key that will run 300 ms after the user stops typing in input
   $('#input').keypress( createBuffered(function() {
   
   	// Input field value
@@ -239,7 +239,7 @@ form {
       $("#arraysize").attr("disabled", "disabled");    			
     		
       // Process input with selected function
-      var hashFunction = $("#function").val();        	
+      var hashFunction = $("#function").val();
       switch(hashFunction) {
       	// No function chosen
       	case '0':
@@ -307,9 +307,6 @@ form {
 	/* Next button pushed - load next slides */
 	function next() {
 	
-	  // Insert new empty line
-	  av.umsg("\n");
-		
 	  var next = nextStep.dequeue();
 		
 	  // If activity is insertion
@@ -350,7 +347,6 @@ form {
 	  // Linear Probing Resolution
 	  linearProbing(inputVal, pos);
 	}
-	
 	
 	/* Collision Resolutions */
 		
@@ -421,16 +417,16 @@ form {
 			
 	    // Preceed insertion with highlight
 	    var posValueHighlight = {
-		  position: pos,
-		  value: val,
-		  insert: false
+		  	position: pos,
+		  	value: val,
+		  	insert: false
 	    };
 	    nextStep.enqueue(posValueHighlight);
 			
 	    var posValue = {
-		  position: pos,
-		  value: val,
-		  insert: true
+		  	position: pos,
+		  	value: val,
+		  	insert: true
 	    };
 	    nextStep.enqueue(posValue);
 	  }
