--- a/Exercises/ShellsortSeries.html
+++ b/Exercises/ShellsortSeries.html
@@ -14,7 +14,7 @@
     function getAnswer(series) {
       if (series[series.length-1] !== 1) return "False";
       for (var i = 1; i < series.length; i++) 
-        { if (series[i] > series[i-1]) return "False"; }
+        { if (series[i] >= series[i-1]) return "False"; }
       return "True";
     }
 
@@ -22,12 +22,10 @@
     // The series will have count+1 elements
     function makeSeries(count) {
       var series = [];
-      for (var i = 0; i<count; i++)
+      for (var i = 0; i<=count; i++)
         series[i] = KhanUtil.randRange(1, 10);
       if (KhanUtil.randRange(0, 1) === 1)
         series[count] = 1;
-      else
-        series[count] = KhanUtil.randRange(1, 10);
       return series;
     }
   </script>
