--- a/AV/SSprofHelp.html
+++ b/AV/SSprofHelp.html
@@ -7,7 +7,7 @@
 </head>
 
 <body>
-<h1>Help Page</h1>
+<h1>Shellsort Proficiency Exercise Help Page</h1>
 <p>
 This exercise asks you to reproduce the actions taken by the Shellsort
 algorithm on a random sequence of 10 values.
