--- a/AV/ShellsortProficiency.html
+++ b/AV/ShellsortProficiency.html
@@ -232,7 +232,7 @@ a.jsavsettings {
   // Process help button: Give a full help page for this activity
   // We might give them another HTML page to look at.
   function help() {
-    myRef = window.open("http://algoviz.org/OpenDSA/trunk/AV/SSprofHelp.html", 'helpwindow');
+    myRef = window.open("SSprofHelp.html", 'helpwindow');
   }
 
   // Process about button: Pop up a message with an Alert
